<resources>
    <string name="app_name">Point of Sale</string>
    <string name="action_settings">Settings</string>
    <string name="item">Item: </string>
    <string name="quantity">Quantity: </string>
    <string name="newItem">New Item</string>
    <string name="newOrder">New Order</string>
    <string name="unitPrice">Unit Price: </string>
    <string name="total">Total: </string>
    <string name="totalTextView">0.00</string>
    <string name="unitPriceField">0.00</string>
    <string name="quantityField">1</string>
    <string name="list">""</string>



</resources>
