<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Point_of_Sale"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="csc472.project2.browningjamesprogrammingassignment3.MainActivity"
    tools:showIn="@layout/activity_main"
    android:weightSum="1"
    android:orientation="vertical"
    android:baselineAligned="false">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right">

        <Button
            android:text="@string/newOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newOrderButton"
            android:layout_weight="1" />

        <Button
            android:text="@string/newItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newItemButton"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_weight="0.02">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textView2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="24sp"
            android:fontFamily="sans-serif"
            android:text="@string/item" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:foregroundGravity="right"
            android:layout_gravity="right"
            android:weightSum="1">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/itemEditText"
                style="@style/Widget.AppCompat.AutoCompleteTextView" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="354dp"
        android:layout_height="189dp"
        android:layout_weight="0.68">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="178dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:id="@+id/textView7"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="24sp"
                android:fontFamily="sans-serif"
                android:text="Quantity: " />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:id="@+id/textView8"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="24sp"
                android:fontFamily="sans-serif"
                android:text="@string/unitPrice" />

            <Button
                android:text="@string/total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/totalButton" />

            <TextView
                android:text="@string/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/printList" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/quantityField"
                android:textAlignment="viewEnd"
                android:textSize="18sp"
                android:singleLine="true"
                android:hint="@string/quantityField"
                android:text="@string/quantityField" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/unitPriceField"
                android:textAlignment="viewEnd"
                android:textSize="18sp"
                android:hint="@string/unitPriceField"
                android:singleLine="true"
                android:text="@string/unitPriceField" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/totalTextView"
                android:textSize="24sp"
                android:textAlignment="viewEnd"
                android:text="@string/totalTextView" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
